apps/testing-07-07-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-07-07-1
  namespace: dev
  labels:
    app: testing-07-07-1
    backstage.io/kubernetes-id: testing-07-07-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing-07-07-1
  template:
    metadata:
      labels:
        app: testing-07-07-1
        backstage.io/kubernetes-id: testing-07-07-1
        environment: dev
    spec:
      containers:
        - name: testing-07-07-1
          image: chaitanyapandeygspann/testing-07-07-1:1.0.1
          ports:
            - containerPort: 8080
