apps/testing-07-07-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-07-07-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: testing-07-07-1
spec:
  selector:
    app: testing-07-07-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
